--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.80.2",
     "@react-three/fiber": "^8.13.6",
+    "bootstrap-icons": "^1.10.5",
+    "chroma-js": "^2.4.2",
     "framer-motion": "^9.1.7",
+    "gsap": "^3.12.2",
     "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-tile": "^1.0.1",
     "react-tilt": "^0.1.4",
