--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@material-ui/core": "^4.12.4",
     "@react-three/drei": "^9.80.2",
     "@react-three/fiber": "^8.13.6",
     "bootstrap-icons": "^1.10.5",
@@ -20,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.15.0",
     "react-tile": "^1.0.1",
     "react-tilt": "^0.1.4",
