--- a/package.json
+++ b/package.json
@@ -9,24 +9,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emailjs/browser": "^3.11.0",
+    "@emailjs/browser": "^3.12.1",
     "@material-ui/core": "^4.12.4",
-    "@react-three/drei": "^9.80.2",
-    "@react-three/fiber": "^8.13.6",
+    "@react-three/drei": "^9.112.0",
+    "@react-three/fiber": "^8.17.7",
     "bootstrap-icons": "^1.10.5",
     "chroma-js": "^2.4.2",
     "framer-motion": "^9.1.7",
     "gsap": "^3.12.2",
+    "lodash": "^4.17.21",
     "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-parallax-tilt": "^1.7.237",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.26.1",
     "react-tile": "^1.0.1",
     "react-tilt": "^0.1.4",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.149.0"
+    "three": "^0.141.0",
+    "three-mesh-bvh": "^0.7.8",
+    "use": "^3.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
